--- a/app/src/main/res/layout/activity_tabs.xml
+++ b/app/src/main/res/layout/activity_tabs.xml
@@ -33,7 +33,7 @@
                     android:layout_weight="0"
                     android:orientation="horizontal"/>
 
-                <com.example.madiyarzhenis.feedbox.NoneSwipableViewPager
+                <kz.smf.almaty.feedbook.NoneSwipableViewPager
                     android:id="@+id/pager"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
